[LeetCode] OptimalAccountBalancing - Base case working (1/2).